--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 </head>
 <body>
 	<main>
+		<h1>Bec's Awesome Page</h1>
 		<p>This page was generated from Wes' File Structure Template Repo.</p>
 
-		<p>Go crazy and customize me.</p>
+		<h2>This is a secondary heading</h2>
+		<p>fix this.</p>
 	</main>
 
 
