--- a/lab2/index.html
+++ b/lab2/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 2 - My First HTML</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+	<div id= "content">
+		<h1>Hello World</h1>
 
+		<hr width=30% align="left">
+
+		<p>Wang Liao and Rebecca Slason are partners. They work remotely together through Teletype and messaging over Discord. The image below is a sketch that Liao drew.</p>
+
+		<img src="artg118sketch.png" width=240px height=400px>
+	</div>
 </body>
 </html>
