--- a/index.html
+++ b/index.html
@@ -1,23 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Bec's Homepage</title>
+	<title>Rebecca's ART 101 Homepage</title>
 	<link rel="stylesheet" type="text/css" href="css/site.css">
 </head>
 <body>
 	<main>
-		<h1>Bec's Awesome Page</h1>
-		<p>This page was generated from Wes' File Structure Template Repo.</p>
+		<h1> id="homepage-title">Rebecca's Page</h1>
 
-		<img src="img/pumpkin.png" width=450>
+		<hr>
 
-		<a href="lab2/index.html">
-			<p>Here is the link to lab 2</p>
-		</a>
+		<img id="my-portrait" src="callieandbecca.jpg" />
+
+		<div id="self-intro">
+			<p>Hi everyone! Welcome to my page for ART 101 with Professor Wes Modes here at UCSC.</p>
+
+			<p>My name is Rebecca Slason but most people call me Becca or Bec. I am a 3rd year student graduating in Spring 2023 with a BA in Art & Design: Games and Playable Media and also a BA in Global Musics.</p>
+
+			<p>I am an artist first and foremost. While I am getting better at programming with classes like ART 101 and CMPM 35, I still struggle with the logical thinking behind code. It can be very mathematical at times, and despite the simplicity, the process does not come easy to me. Even taking CSE 30 has not made me an adequate programmer. However, I believe that after this quarter I will be a lot more comfortable with coding! </p>
 
 		<h2>This is a secondary heading</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	</main>
+
+	</div>
+
+	<div class="labs-section">
+		<h2>Labs</h2>
+		<u1>
+
+			<li><a href="lab2/index.html">Lab 2: Your First HTML</a></li>
+			<li><a href="lab3/index.html">Lab 3: File Structures</a></li>
+			<li><a href="lab4/index.html">Lab 4: File Transfer</a></li>
+			<li><a href="lab5/index.html">Lab 5</a></li>
+			<li><a href="lab6/index.html">Lab 6</a></li>
+		</ul>
+	</div>
+
+</main>
 
 
 </body>
