--- a/lab3/index.html
+++ b/lab3/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 3: File Structures</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
-
+	<h1>Lab 3: File Structures</h1>
+	<p>For this lab, we had to check our local file structure and format our webpage so that all of our labs would be on the website. To do this we had to add index.html files and pay attention to new coding tags and technique we learned in lectures thus far.</p>
+	<h2>Challenges</h2>
+	<p> I struggled with minor mistakes in my code like forgetting a / or mispelling a file name which caused the website not to work. Once I went back and proof read my code these mistakes were easy to fix. It was just a little bit tedious.</p>
+	<h2>Results</h2>
+	<p>This is the file structure I created which allows you to be seeing this page!</p>
+	<img id="file-structure" src="img/filestructure.png" />
 </body>
 </html>
