lab 3 almost done. added screenshots

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -13,5 +13,17 @@
 	<h2>Results</h2>
 	<p>This is the file structure I created which allows you to be seeing this page!</p>
 	<img id="file-structure" src="img/filestructure.png" />
+	<h3>Screenshots for Lab 3</h2>
+	<p>These are the screenshots I took for Lab 3!</p>
+	<img id="starting-structure" src="img/startingstructure.png" />
+	<p>Here you can see the initial structure when we started the lab.</p>
+	<img id="updated-home" src="img/updatedhomepage.png" />
+	<p>This screenshot shows our new home page as we view it in browser for the first time.</p>
+	<img id="code-home" src="img/codeforhome.png" />
+	<p>This is the code I wrote to make the home page which you can preview in the screenshot above.</p>
+	<img id="code-labthree" src="img/codeforlabthree.png" />
+	<p>This is the code behind the page you are seeing now--without the screenshots.</p>
+	<img id="look-labthree" src="img/lookingatlabthree.png" />
+	<p>This is the old Lab 3 page before adding these screenshots. It is fun to look at the code in the previous step and see how it made this image.</p>
 </body>
 </html>
