--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<main>
-		<h1 id="homepage-title">Rebecca's Page</h1>
+		<h1 id="homepage-title">Rebecca's ART 101 Page</h1>
 
 		<hr>
 
