--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 </head>
 <body>
 	<main>
-		<h1 id="homepage-title">Rebecca's ART 101 Page</h1>
+		<h1 id="homepage-title">REBECCA'S ART 101 PAGE</h1>
 
 		<hr>
 
 		<img id="my-portrait" src="img/callieandbecca.jpg" />
 
 		<div id="self-intro">
-			<p>Hi everyone! Welcome to my page for ART 101 with Professor Wes Modes here at UCSC.</p>
+			<p>Hi Everyone! Welcome to my page for ART 101 with Professor Wes Modes here at UCSC.</p>
 
 			<p>My name is Rebecca Slason but most people call me Becca or Bec. I am a 3rd year student graduating in Spring 2023 with a BA in Art & Design: Games and Playable Media and also a BA in Global Musics.</p>
 
@@ -21,7 +21,7 @@
 		</div>
 
 	<div class="labs-section">
-		<h2>Labs</h2>
+		<h2>LABS</h2>
 		<u1>
 
 			<li><a href="lab2/index.html">Lab 2: Your First HTML</a></li>
