--- a/lab4/index.html
+++ b/lab4/index.html
@@ -17,42 +17,42 @@
 </body>
 </html>
 <div id="js-code">
-	<pre><code>
-		// A short guide on how to check the oil in a car and how to make a minesweeper game.
-		// Both guides are step by step.
-		// @link URL
-		// @file This file defines the MyClass class.
-		// @author Rebecca Slason and Wang Liao.
-		// @since x.x.x
-		//How to check the oil in your car:
-		  //Park the vehicle on level ground
-		  //Get a paper towel or rag
-		  //Open the hood of your car
-		    //Pull the hood release lever that is inside the car
-		    //Go to the front of the hood
-		    //Find the secondary release.
-		    //Lift the hood
-		    //Use prop prod to hold it
-		  //Find the dipstick tube (it usually has an oil logo on or near it)
-		  //Grab the handle of the dipstick and pull it completely out
-		  //Wipe the oil off the stick using your towel
-		  //Now that the stick is clean put it back in the tube and swiftly pull it back out
-		    //Make sure to hold the dipstick level so that the oil doesn’t drip down
-		  //Now check where the oil level is on the stick
-		    //Depending on what kind of car you have, the markings will be different on the end of the stick
-		    //Refer to your owner’s manual to read how high or low your oil is and how much oil you might need
+<pre><code>
+	// A short guide on how to check the oil in a car and how to make a minesweeper game.
+	// Both guides are step by step.
+	// @link URL
+	// @file This file defines the MyClass class.
+	// @author Rebecca Slason and Wang Liao.
+	// @since x.x.x
+	//How to check the oil in your car:
+	  //Park the vehicle on level ground
+	  //Get a paper towel or ragsss
+	  //Open the hood of your car
+	    //Pull the hood release lever that is inside the car
+	    //Go to the front of the hood
+	    //Find the secondary release.
+	    //Lift the hood
+	    //Use prop prod to hold it
+	  //Find the dipstick tube (it usually has an oil logo on or near it)
+	  //Grab the handle of the dipstick and pull it completely out
+	  //Wipe the oil off the stick using your towel
+	  //Now that the stick is clean put it back in the tube and swiftly pull it back out
+	    //Make sure to hold the dipstick level so that the oil doesn’t drip down
+	  //Now check where the oil level is on the stick
+	    //Depending on what kind of car you have, the markings will be different on the end of the stick
+	    //Refer to your owner’s manual to read how high or low your oil is and how much oil you might need
 
 
-		//How to make a minesweeper game
+	//How to make a minesweeper game
 
-		//Set the number of mines, columns, and rows
-		//Loop through all columns to create grids (randomly distribute mines)
-		  //Loop through all rows to create grids
-		//While the winning or losing condition is not fulfilled
-		  //Player flip or put a flag on a unflipped grid
-		  //Show the result of the input
-		  //Check if the new input fulfills winning or losing condition
-		    //If input fulfills any condition, the game ends
-		    //Else, loop back to accept player input
-		</pre></code>
+	//Set the number of mines, columns, and rows
+	//Loop through all columns to create grids (randomly distribute mines)
+	  //Loop through all rows to create grids
+	//While the winning or losing condition is not fulfilled
+	  //Player flip or put a flag on a unflipped grid
+	  //Show the result of the input
+	  //Check if the new input fulfills winning or losing condition
+	    //If input fulfills any condition, the game ends
+	    //Else, loop back to accept player input
+	</pre></code>
 </div>
