--- a/lab5/index.html
+++ b/lab5/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab: Data Types and Variables</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+	<div id="picture">
+		<img src="img/stacy.jpeg">
+	</div>
+	<div id="content">
+		<h1>Lab 5: Data Types and Variables</h1>
+		<p>For this lab we had to explore basic JavaScript data types and variables with our partner.</p>
+		<h2>Challenges</h2>
+		<p>snfvjknfknvsf</p>
+		<h2>Results</h2>
+		<p>ksnvfnklsv</p>
+		<h3>Script Output</h3>
+		<div class=output>
+			<script type="text/javascript" src="js/lab.js"></script>
+		</div>
 
 </body>
 </html>
