--- a/lab5/index.html
+++ b/lab5/index.html
@@ -6,9 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
-	<div id="picture">
-		<img src="img/stacy.jpeg">
-	</div>
+	<id="picture" img src="img/stacy.jpeg">
 	<div id="content">
 		<h1>Lab 5: Data Types and Variables</h1>
 		<p>For this lab we had to explore basic JavaScript data types and variables with our partner.</p>
