fixed image on lab 5

--- a/lab5/index.html
+++ b/lab5/index.html
@@ -6,14 +6,14 @@
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
-	<id="picture" img src="img/stacy.jpeg">
+	<img id="picture" src="img/stacy.jpeg"/>
 	<div id="content">
 		<h1>Lab 5: Data Types and Variables</h1>
 		<p>For this lab we had to explore basic JavaScript data types and variables with our partner.</p>
 		<h2>Challenges</h2>
-		<p>snfvjknfknvsf</p>
+		<p>I had problems with changing the size of the photo in CSS. I had ordered the img id="picture" incorrectly; I had the src before the id. So I fixed that and added some code in CSS to make the photo 500 px and align to the right of the page.</p>
 		<h2>Results</h2>
-		<p>ksnvfnklsv</p>
+		<p>After updating a photo of Stacy, my Chevy Cruz, and fixing my code, I sucessfully created the page you are looking at.</p>
 		<h3>Script Output</h3>
 		<div class=output>
 			<script type="text/javascript" src="js/lab.js"></script>
