--- a/lab6/index.html
+++ b/lab6/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 6: Arrays and Objects</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
-
+	<img id="picture" src="img/calliebike.jpeg"/>
+	<img id="picturetwo" src="img/stingray.jpg"/>
+	<div id="content">
+		<h1>Lab 6: Arrays and Objects</h1>
+		<p>For this lab we had to explore JavaScript arrays and objects first in the console in our browser and then in Atom with our partner.</p>
+		<h2>Challenges</h2>
+		<p>I experienced several problems with typos in my lab.js file. I forgot commas and placed semi-colons in their place instead, but after locating the issues I corrected the errors. I am learning that proofreading is esential in programming and you have to be detailed and diligent in your code.</p>
+		<h2>Results</h2>
+		<p>Since this project is based on transportation I decided to add a cute photo of Callie, my dog, next to my bike. She absolutely loves running alongside while I bike. The other photo is of my grandpa's Stingray that I occasionally take drives to the beach. Although, I sadly haven't been able to do that in a while. There is a photo of my Main Ride on my Lab 5 page.</p>
+		<div>
+        <h3>Script Output</h3>
+        <script src="js/lab.js"></script>
+    </div>
+	</div>
 </body>
 </html>
