--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 			<li><a href="lab4/index.html">Lab 4: File Transfer</a></li>
 			<li><a href="lab5/index.html">Lab 5</a></li>
 			<li><a href="lab6/index.html">Lab 6</a></li>
+			<li><a href="lab6/index.html">Lab 7</a></li>
 		</ul>
 	</div>
 
