--- a/lab11/index.html
+++ b/lab11/index.html
@@ -23,14 +23,14 @@
 
 		<div id = "problemDiv">
 			<h3>Problems</h3>
-			<p>I had a few typos as usual with my code that presented me with different errors. Once I fixed the puncuation and spelling of a few things I was able to complete the lab.</p>
+			<p>I ran into issues like not referencing functions correctly when calling them in the code for the js file. I also forgot to update the css to make the button actually happen, but I talked with my partner and fixed this.</p>
 		</div>
 
 		<br>
 
 		<div id = "resultDiv">
 			<h4>Results</h4>
-			<p>My partner and I also completed bonus task questions 1 and 2. We were able to use similar code from Lab 7 to make an anagram. For question 2 we added another input field which returned the results to our output div. Here are our results: </p>
+			<p>My partner and I also completed bonus task questions 1. We created two new buttons that change each other's color when you click on them. You should experiment with it! Here it is: </p>
 		</div>
 
 		<br>
